--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ShaabTrip</title>
+    <title>Shaab Trip- Travel like a BOSS, plan your journey with us</title>
   </head>
 
 <body>
